Converting basic HTML/CSS functionality to Flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Mann OverBoard</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="images/icon.png">
+  <link rel="stylesheet" href="../static/style.css">
+  <link rel="icon" type="image/png" href="../static/icon.png">
   <script src="jquery-3.3.1.min.js"></script>
 </head>
 
@@ -50,7 +50,7 @@
           </div>
           <div class="current-container2">
             <a href = "fullsettingspage.html" style="color: #ffffff; text-decoration: none;">
-              <img id="current_icon" src="test.png" alt="Current Weather Icon" style="width:125%">
+              <img id="current_icon" src="../static/test.png" alt="Current Weather Icon" style="width:125%">
             </a>
           </div>
         </div>
@@ -60,7 +60,7 @@
             <p id="weather_day0_HIGH"></p>
             <p id="weather_day0_LOW"></p>
           </div>
-          <img id="weather_day0_ICON" src="test.png" alt="weather icon" style="width:75%">
+          <img id="weather_day0_ICON" src="../static/test.png" alt="weather icon" style="width:75%">
         </div>
         <div class="weather-container">
           <p id="weather_day1_DATE" class="weather-dates">Today</p>
@@ -68,7 +68,7 @@
             <p id="weather_day1_HIGH"></p>
             <p id="weather_day1_LOW"></p>
           </div>
-          <img id="weather_day1_ICON" src="test.png" alt="weather icon" style="width:75%">
+          <img id="weather_day1_ICON" src="../static/test.png" alt="weather icon" style="width:75%">
         </div>
         <div class="weather-container">
           <p id="weather_day2_DATE" class="weather-dates">Today</p>
@@ -76,7 +76,7 @@
             <p id="weather_day2_HIGH"></p>
             <p id="weather_day2_LOW"></p>
           </div>
-          <img id="weather_day2_ICON" src="test.png" alt="weather icon" style="width:75%">
+          <img id="weather_day2_ICON" src="../static/test.png" alt="weather icon" style="width:75%">
         </div>
         <div class="weather-container">
           <p id="weather_day3_DATE" class="weather-dates">Today</p>
@@ -84,7 +84,7 @@
             <p id="weather_day3_HIGH"></p>
             <p id="weather_day3_LOW"></p>
           </div>
-          <img id="weather_day3_ICON" src="test.png" alt="weather icon" style="width:75%">
+          <img id="weather_day3_ICON" src="../static/test.png" alt="weather icon" style="width:75%">
         </div>
         <div class="weather-container">
           <p id="weather_day4_DATE" class="weather-dates">Today</p>
@@ -92,7 +92,7 @@
             <p id="weather_day4_HIGH"></p>
             <p id="weather_day4_LOW"></p>
           </div>
-          <img id="weather_day4_ICON" src="test.png" alt="weather icon" style="width:75%">
+          <img id="weather_day4_ICON" src="../static/test.png" alt="weather icon" style="width:75%">
         </div>
       </div>
     </div>
